--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -26,8 +26,8 @@
       rel="stylesheet"
     />
 
-    <script src="./scripts.js"></script>
-    <script src="./data.js"></script>
+    <script type= "module" src="scripts.js" defer ></script>
+    <script type= "module" src="data.js"defer></script>
   </head>
   <body>
 
